--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -39,7 +39,7 @@
       "work7":"Pulito e Professionale",
       "work8":"Ho uno amore speciale per i loghi estremamente puliti e minimali, ma allo stesso tempo cerco di donare alla grafica un elemento distinguibile e facile da ricordare.",
       "work9":"Clicca sull'immagine per sapere di più sul processo creativo del logo",
-      "work10":"Clicca sull'immagine foto per sapere di più sul processo creativo del logo e su ",
+      "work10":"Clicca sull'immagine per sapere di più sul processo creativo del logo e su ",
       "restauro":"Restaurazioni",
       "restaurod":"Ripristino foto antiche digitalmente, elimando danni e aggiungendo i colori che avrebbero potuto avere. L'obbiettivo è quello di donare nuova vita alle immagini del passato.",
       "restauro1":"L'arte del restauro",
