--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,7 +7,7 @@
       "selectedworkb":"View All",
       "footerdev":"Designed & Developed in Portland with ",
       "home":"Home",
-      "work":"Artworks & Graphic Design",
+      "work":"Artworks",
       "about":"About",
       "title": " Hello, my name is Davide Di Marsilio",
       "description": "I am an ServiceDesk/Helpdesk Technician and Artist who is currently based in Milan, Italy.",
