--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -7,7 +7,7 @@
       "selectedworkb":"Visualizza tutti",
       "footerdev":"Progettato e Sviluppato a Portland con ",
       "home":"Home",
-      "work":"Lavori Artistici e Grafica",
+      "work":"Artwork",
       "about":"Chi sono",
       "title": " Ciao, mi chiamo Davide Di Marsilio",
       "description": "Sono un Tecnico ServiceDesk/HelpDesk e un Artista attualmente residente a Milano, Italia.",
