Added page titles

--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -1,5 +1,9 @@
 {
     "site": {
+      "site":"Davide Di Marsilio: Sito Personale",
+      "sited":"Il portfolio di Davide Di Marsilio",
+      "abouts":"Chi Sono | Davide Di Marsilio",
+      "aboutd":"Chi è Davide Di Marsilio",
       "aboutredi":"Per leggere la mia biografia e conoscere meglio le mie esperienze e certificazioni",
       "aboutredi2":"Visita la pagina <0>Chi Sono</0>!",
       "selectedwork":"Lavori in Evidenza",
