--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,9 @@
 {
     "site": {
+      "site":"Davide Di Marsilio: Portfolio Site",
+      "sited":"The personal site of Davide Di Marsilio",
+      "abouts":"About | Davide Di Marsilio",
+      "aboutd":"About Davide Di Marsilio",
       "aboutredi":"To read my bio and to know more my experiences and certifications",
       "aboutredi2":"Check the <0>About Me</0> page!",
       "selectedwork":"Selected Work",
@@ -10,7 +14,7 @@
       "work":"Artworks",
       "about":"About",
       "title": " Hello, my name is Davide Di Marsilio",
-      "description": "I am an ServiceDesk/Helpdesk Technician and Artist who is currently based in Milan, Italy.",
+      "description": "I am a ServiceDesk/Helpdesk Technician and Artist who is currently based in Milan, Italy.",
       "artist":"Artist",
       "ost":"Proficient in OS",
       "osd":"With a genuine passion for technology and a broad expertise in operating systems, mainly Windows, I possess a deep understanding of various OS platforms. Additionally, my proficiency extends to Active Directory and Azure and Python scripting, allowing me to leverage these powerful tools for efficient operations within diverse IT environments.",
