--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,10 +14,10 @@
       "work":"Artworks",
       "about":"About",
       "title": " Hello, my name is Davide Di Marsilio",
-      "description": "I am a ServiceDesk/Helpdesk Technician and Artist who is currently based in Milan, Italy.",
+      "description": "I am a System Administrator with a passion for art and design who is currently based in Milan, Italy.",
       "artist":"Artist",
       "ost":"Proficient in OS",
-      "osd":"With a genuine passion for technology and a broad expertise in operating systems, mainly Windows, I possess a deep understanding of various OS platforms. Additionally, my proficiency extends to Active Directory and Azure and Python scripting, allowing me to leverage these powerful tools for efficient operations within diverse IT environments.",
+      "osd":"With a genuine passion for technology and a broad expertise in operating systems, mainly Windows, I possess a deep understanding of various OS platforms. Additionally, my proficiency extends to Active Directory and Azure and Powershell scripting, allowing me to leverage these powerful tools for efficient operations within diverse IT environments.",
       "cct":"Clear Communicator",
       "ccd":"With a background as a Helpdesk operator, I have honed my communication skills to a high level. I excel in understanding and addressing the needs and requirements of clients. My ability to communicate clearly and actively listen enables me to establish strong working relationships and produce designs that meet and exceed expectations.",
       "avt":"Artistic Vision",
@@ -59,7 +59,7 @@
     "about":{
       "title":"About",
       "titled":"Thanks for stopping by. Read below to learn more about myself and my background.",
-      "text1":"I am an <0>Helpdesk Technician</0> with almost 3 years of experience in various IT fields. I possess knowledge in handling <1>Azure, Active Directory, Operating Systems, and troubleshooting</1> a wide range of software-related problems. Additionally, I have worked as a <2>Control Room operator</2>, leveraging my skills in monitoring softwares like Nagios.",
+      "text1":"I am an <0>System Administrator</0> with almost 3 years of experience in various IT fields. I possess knowledge in handling <1>Azure, Active Directory, Operating Systems, and troubleshooting</1> a wide range of software-related problems. Additionally, I have worked as a <2>Control Room operator</2>, leveraging my skills in monitoring softwares like Nagios.",
       "text2":"<0>Computer science</0> have been an integral part of my life since childhood and a life long passion, as I began using PCs with Windows 98. I am deeply passionate about this field and constantly strive to <1>expand my knowledge through continuous learning</1>. One of my ambitions is to work as a <2>system administrator</2>, where I can utilize my expertise to tackle complex IT challenges and ensure optimal system performance.",
       "text3":"In addition to my IT skills, I am a <0>self-taught artist</0> proficient in <1>graphic logo design and various artistic endeavors</1>. Since the beginning of my journey in the artistic world, I have honed my skills in <2>Photoshop and Illustrator</2>. I thoroughly enjoy creating designs for companies, websites, t-shirts, and numerous other platforms and applications. Creating art allows me to express <3>myself creatively and combine it with my technical skills</3> to make beautiful and significant designs.",
       "exp":"Work Experiences",
