--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -14,10 +14,10 @@
       "work":"Artwork",
       "about":"Chi sono",
       "title": " Ciao, mi chiamo Davide Di Marsilio",
-      "description": "Sono un Tecnico ServiceDesk/HelpDesk e un Artista attualmente residente a Milano, Italia.",
+      "description": "Sono un System Administrator con una passione per l'arte e il design, attualmente residente a Milano, Italia.",
       "artist":"Artista",
       "ost":"Conoscenza dei SO",
-      "osd":"Con una vera passione per la tecnologia e un'ampia esperienza nei sistemi operativi, principalmente Windows, possiedo una profonda conoscenza di vari Sistemi Operativi. Inoltre, la mia competenza si estende ad Active Directory , Azure e allo scripting Python, consentendomi di sfruttare questi potenti strumenti per operazioni efficienti all'interno di diversi ambienti IT.",
+      "osd":"Con una vera passione per la tecnologia e un'ampia esperienza nei sistemi operativi, principalmente Windows, possiedo una profonda conoscenza di vari Sistemi Operativi. Inoltre, la mia competenza si estende ad Active Directory , Azure e allo scripting Powershell, consentendomi di sfruttare questi potenti strumenti per operazioni efficienti all'interno di diversi ambienti IT.",
       "cct":"Abile Comunicatore",
       "ccd":"Con un passato da operatore Helpdesk, ho affinato le mie capacità di comunicazione a un livello elevato. Sono in grado di comprendere e soddisfare le esigenze e i requisiti dei clienti. La mia capacità di comunicare in modo chiaro e di ascoltare attivamente mi permette di stabilire solidi rapporti di lavoro e di realizzare progetti che soddisfano le aspettative.",
       "avt":"Visione Artistica",
@@ -59,7 +59,7 @@
     "about":{
       "title":"Chi Sono",
       "titled":"Grazie per aver visiato il mio sito! Leggete qui sotto per saperne di più su di me e sul mio percorso.",
-      "text1":"Sono un <0>tecnico Helpdesk</0> con quasi 3 anni di esperienza in vari settori IT. Possiedo conoscenze nella gestione di <1>Azure, Active Directory, Sistemi Operativi</1> e nella risoluzione di un'ampia gamma di problemi legati ai software. Inoltre, ho lavorato come <2>operatore di Control Room</2>, sfruttando le mie competenze in software di monitoraggio come Nagios.",
+      "text1":"Sono un <0>System Administrator</0> con quasi 3 anni di esperienza in vari settori IT. Possiedo conoscenze nella gestione di <1>Azure, Active Directory, Sistemi Operativi</1> e nella risoluzione di un'ampia gamma di problemi legati ai software. Inoltre, ho lavorato come <2>operatore di Control Room</2>, sfruttando le mie competenze in software di monitoraggio come Nagios.",
       "text2":"<0>L'informatica</0> è stata parte integrante della mia vita fin dall'infanzia e una passione che mi ha accompagnato da sempre, dal momento che ho iniziato a usare il mio primo PC con Windows 98. Sono profondamente appassionato di questo campo e mi impegno costantemente ad <1>ampliare le mie conoscenze attraverso un costante apprendimento</1>. Una delle mie ambizioni è quella di lavorare come <2>amministratore di sistema</2>, dove posso utilizzare la mia accumulata esperienza per affrontare nuove sfide informatiche.",
       "text3":"Oltre alle mie competenze informatiche, sono un <0>artista autodidatta</0> esperto nella progettazione di <1>loghi grafici e in varie attività artistiche</1>. Fin dall'inizio del mio percorso nel mondo artistico, ho affinato le mie competenze in <2>Photoshop e Illustrator</2>. Mi piace molto creare design per aziende, siti web, magliette e numerose altre piattaforme e applicazioni. Creare arte mi permette di <3>esprimermi in modo creativo e di combinarlo con le mie capacità tecniche</3> per realizzare design belli e significativi.",
       "exp":"Esperienze Lavorative",
