--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -57,7 +57,7 @@
       "pagenotfound":"404"
     },
     "about":{
-      "title":"About",
+      "title":"About me",
       "titled":"Thanks for stopping by. Read below to learn more about myself and my background.",
       "text1":"I am an <0>System Administrator</0> with almost 3 years of experience in various IT fields. I possess knowledge in handling <1>Azure, Active Directory, Operating Systems, and troubleshooting</1> a wide range of software-related problems. Additionally, I have worked as a <2>Control Room operator</2>, leveraging my skills in monitoring softwares like Nagios.",
       "text2":"<0>Computer science</0> have been an integral part of my life since childhood and a life long passion, as I began using PCs with Windows 98. I am deeply passionate about this field and constantly strive to <1>expand my knowledge through continuous learning</1>. One of my ambitions is to work as a <2>system administrator</2>, where I can utilize my expertise to tackle complex IT challenges and ensure optimal system performance.",
